--- a/ProjectManager/ProjectManager.csproj
+++ b/ProjectManager/ProjectManager.csproj
@@ -86,6 +86,10 @@
     <Compile Include="View\ProjectManagerView.xaml.cs">
       <DependentUpon>ProjectManagerView.xaml</DependentUpon>
     </Compile>
+    <Resource Include="ExpressionDark.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -137,7 +141,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\WindLoads\WindLoads.csproj">
+      <Project>{7d938a25-ac75-47c1-93d4-99c78428cdba}</Project>
+      <Name>WindLoads</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Comments\ViewModelBase.xml" />
   </ItemGroup>
