--- a/KPK_CalcSite/KPK_CalcSite.csproj
+++ b/KPK_CalcSite/KPK_CalcSite.csproj
@@ -53,6 +53,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -185,27 +187,51 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="App_Start\Binders.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Connected Services\MaterialWeights\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\SnowLoadsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\SnowLoadMonopitchRoof.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\SnowLoadsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Connected Services\MaterialWeights\KPK_CalcSite.MaterialWeights.MaterialWeight.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <None Include="Connected Services\MaterialWeights\Service.disco" />
+    <None Include="Connected Services\MaterialWeights\configuration91.svcinfo" />
+    <None Include="Connected Services\MaterialWeights\configuration.svcinfo" />
+    <None Include="Connected Services\MaterialWeights\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\SnowLoads\CylindricalRoof.png" />
+    <Content Include="Content\Images\SnowLoads\Monopitch.png" />
+    <Content Include="Content\Images\SnowLoads\MultispanRoof.png" />
+    <Content Include="Content\Images\SnowLoads\PitchedRoof.png" />
     <Content Include="Content\Images\Rebars.png" />
     <Content Include="Content\Images\Snow.png" />
+    <Content Include="Content\Images\SnowLoads\SnowMapPoland.png" />
     <Content Include="Content\Images\Weight.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -216,6 +242,16 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Connected Services\MaterialWeights\Service.wsdl" />
+    <None Include="Connected Services\MaterialWeights\Service.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\MaterialWeights\Service1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\MaterialWeights\Service2.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -227,6 +263,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\snow.loads.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -263,8 +300,10 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Calculators.cshtml" />
     <Content Include="Views\Home\DeadLoadCalculator.cshtml" />
-    <Content Include="Views\Home\SnowLoadDefinitions.cshtml" />
-    <Content Include="Views\Home\SnowLoadCalculator.cshtml" />
+    <Content Include="Views\SnowLoads\Definitions.cshtml" />
+    <Content Include="Views\SnowLoads\Calculator.cshtml" />
+    <Content Include="Views\SnowLoads\_BuildingSite.cshtml" />
+    <Content Include="Views\SnowLoads\MonopitchRoof.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -281,6 +320,18 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\MaterialWeights\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SnowLoads\SnowLoads.csproj">
+      <Project>{4deb055d-acef-45fe-a927-b6e757099030}</Project>
+      <Name>SnowLoads</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
