A lot of new snow load calculators

--- a/KPK_CalcSite/KPK_CalcSite.csproj
+++ b/KPK_CalcSite/KPK_CalcSite.csproj
@@ -207,7 +207,16 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\SnowLoadMonopitchRoof.cs" />
+    <Compile Include="Models\SnowLoads\BuildingData.cs" />
+    <Compile Include="Models\SnowLoads\ExceptionalSnowLoadMultispanRoof.cs" />
+    <Compile Include="Models\SnowLoads\SnowLoadCylindricalRoof.cs" />
+    <Compile Include="Models\SnowLoads\SnowLoadDriftingAtProjectionsObstructions.cs" />
+    <Compile Include="Models\SnowLoads\SnowLoadMonopitchRoof.cs" />
+    <Compile Include="Models\SnowLoads\SnowLoadMultispanRoof.cs" />
+    <Compile Include="Models\SnowLoads\SnowLoadPitchedRoof.cs" />
+    <Compile Include="Models\SnowLoads\SnowLoadRoofAbuttingToTallerConstruction.cs" />
+    <Compile Include="Models\SnowLoads\SnowLoadSnowguards.cs" />
+    <Compile Include="Models\SnowLoads\SnowLoadSnowOverhanging.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\SnowLoadsViewModel.cs" />
@@ -226,12 +235,18 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\SnowLoads\CylindricalRoof.png" />
+    <Content Include="Content\Images\SnowLoads\DriftingAtProjectionsObstructions.png" />
+    <Content Include="Content\Images\SnowLoads\ExceptionalMultispanRoof.png" />
     <Content Include="Content\Images\SnowLoads\Monopitch.png" />
     <Content Include="Content\Images\SnowLoads\MultispanRoof.png" />
     <Content Include="Content\Images\SnowLoads\PitchedRoof.png" />
     <Content Include="Content\Images\Rebars.png" />
     <Content Include="Content\Images\Snow.png" />
+    <Content Include="Content\Images\SnowLoads\RoofAbuttingToTallerConstruction_1.png" />
+    <Content Include="Content\Images\SnowLoads\RoofAbuttingToTallerConstruction_2.png" />
+    <Content Include="Content\Images\SnowLoads\Snowguards.png" />
     <Content Include="Content\Images\SnowLoads\SnowMapPoland.png" />
+    <Content Include="Content\Images\SnowLoads\SnowOverhanging.png" />
     <Content Include="Content\Images\Weight.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -304,6 +319,24 @@
     <Content Include="Views\SnowLoads\Calculator.cshtml" />
     <Content Include="Views\SnowLoads\_BuildingSite.cshtml" />
     <Content Include="Views\SnowLoads\MonopitchRoof.cshtml" />
+    <Content Include="Views\SnowLoads\MonopitchRoofResult.cshtml" />
+    <Content Include="Views\SnowLoads\_BuildingSiteResult.cshtml" />
+    <Content Include="Views\SnowLoads\PitchedRoof.cshtml" />
+    <Content Include="Views\SnowLoads\PitchedRoofResult.cshtml" />
+    <Content Include="Views\SnowLoads\MultispanRoof.cshtml" />
+    <Content Include="Views\SnowLoads\MultispanRoofResult.cshtml" />
+    <Content Include="Views\SnowLoads\CylindricalRoof.cshtml" />
+    <Content Include="Views\SnowLoads\CylindricalRoofResult.cshtml" />
+    <Content Include="Views\SnowLoads\RoofAbuttingToTallerConstruction.cshtml" />
+    <Content Include="Views\SnowLoads\RoofAbuttingToTallerConstructionResult.cshtml" />
+    <Content Include="Views\SnowLoads\DriftingAtProjectionsObstructions.cshtml" />
+    <Content Include="Views\SnowLoads\DriftingAtProjectionsObstructionsResult.cshtml" />
+    <Content Include="Views\SnowLoads\SnowOverhanging.cshtml" />
+    <Content Include="Views\SnowLoads\SnowOverhangingResult.cshtml" />
+    <Content Include="Views\SnowLoads\Snowguards.cshtml" />
+    <Content Include="Views\SnowLoads\SnowguardsResult.cshtml" />
+    <Content Include="Views\SnowLoads\ExceptionalMultispanRoof.cshtml" />
+    <Content Include="Views\SnowLoads\ExceptionalMultispanRoofResult.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
