--- a/SnowLoads/SnowLoads.csproj
+++ b/SnowLoads/SnowLoads.csproj
@@ -64,8 +64,12 @@
     <Compile Include="Exceptional\ExceptionalSnowBehindParapet.cs" />
     <Compile Include="Exceptional\ExceptionalSnowBehindParapetAtEaves.cs" />
     <Compile Include="Exceptional\ExceptionalSnowInValleyBehindParapet.cs" />
+    <Compile Include="Interfaces\IBuilding.cs" />
+    <Compile Include="Interfaces\IBuildingSite.cs" />
     <Compile Include="Interfaces\ICalculatable.cs" />
     <Compile Include="Interfaces\ILengthProvider.cs" />
+    <Compile Include="Interfaces\IMonopitchRoof.cs" />
+    <Compile Include="Interfaces\ISnowLoad.cs" />
     <Compile Include="SnowLoad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
