Snow load tests.

--- a/SnowLoadsTests/SnowLoadsTests.csproj
+++ b/SnowLoadsTests/SnowLoadsTests.csproj
@@ -72,8 +72,22 @@
     <Compile Include="BuildingSiteTests.cs" />
     <Compile Include="BuildingTests.cs" />
     <Compile Include="BuildingImplementation.cs" />
+    <Compile Include="BuildingTypes\CylindricalRoofTests.cs" />
+    <Compile Include="BuildingTypes\DriftingAtProjectionsObstructionsTests.cs" />
     <Compile Include="BuildingTypes\MonopitchRoofTests.cs" />
+    <Compile Include="BuildingTypes\MultiSpanRoofTests.cs" />
     <Compile Include="BuildingTypes\PitchedRoofTests.cs" />
+    <Compile Include="BuildingTypes\RoofAbuttingToTallerConstructionTests.cs" />
+    <Compile Include="BuildingTypes\SnowguardsTests.cs" />
+    <Compile Include="BuildingTypes\SnowOverhangingTests.cs" />
+    <Compile Include="Exceptional\ExceptionalMultiSpanRoofTests.cs" />
+    <Compile Include="Exceptional\ExceptionalObstructionOnFlatRoofTests.cs" />
+    <Compile Include="Exceptional\ExceptionalObstructionOnPitchedOrCurvedRoofTests.cs" />
+    <Compile Include="Exceptional\ExceptionalOverDoorOrLoadingBayTests.cs" />
+    <Compile Include="Exceptional\ExceptionalRoofAbuttingToTallerConstructionTests.cs" />
+    <Compile Include="Exceptional\ExceptionalSnowBehindParapetAtEavesTests.cs" />
+    <Compile Include="Exceptional\ExceptionalSnowBehindParapetTests.cs" />
+    <Compile Include="Exceptional\ExceptionalSnowInValleyBehindParapetTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SnowLoadImplementation.cs" />
     <Compile Include="SnowLoadTests.cs" />
