--- a/Tools/Tools.csproj
+++ b/Tools/Tools.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="AbbreviationAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
