--- a/KPK_CalcSite/KPK_CalcSite.csproj
+++ b/KPK_CalcSite/KPK_CalcSite.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DeadLoadsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Models\MailModels.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ReinforcementController.cs" />
     <Compile Include="Controllers\SnowLoadsController.cs" />
