--- a/BeamStatica/BeamStatica.csproj
+++ b/BeamStatica/BeamStatica.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Materials\Material.cs" />
     <Compile Include="Nodes\FixedNode.cs" />
     <Compile Include="Nodes\FreeNode.cs" />
+    <Compile Include="Nodes\Hinge.cs" />
     <Compile Include="Nodes\Interfaces\IBendingMomentProvider.cs" />
     <Compile Include="Nodes\Interfaces\IDeflectionProvider.cs" />
     <Compile Include="Nodes\Interfaces\INode.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="Nodes\Interfaces\IShearForceProvider.cs" />
     <Compile Include="Nodes\Node.cs" />
     <Compile Include="Nodes\SupportedNode.cs" />
+    <Compile Include="Nodes\TelescopeNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Results\Displacements\Displacement.cs" />
     <Compile Include="Results\Interfaces\IGetResult.cs" />
