--- a/BeamStaticaTests/BeamStaticaTests.csproj
+++ b/BeamStaticaTests/BeamStaticaTests.csproj
@@ -64,13 +64,16 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BeamsTests\BeamWithDoubleOverhangingTests.cs" />
-    <Compile Include="BeamsTests\BeamWithHingeTests.cs" />
+    <Compile Include="BeamsTests\BeamWithDoubleHingeTests.cs" />
+    <Compile Include="BeamsTests\BeamWithHinge3Tests.cs" />
+    <Compile Include="BeamsTests\BeamWithHinge2Tests.cs" />
+    <Compile Include="BeamsTests\BeamWithHinge1Tests.cs" />
     <Compile Include="BeamsTests\BeamWithRightOverhangingTests.cs" />
+    <Compile Include="BeamsTests\BeamWithSingleSpanFixedEndsTests.cs" />
     <Compile Include="BeamsTests\BeamWithTelescopeSupportTests.cs" />
     <Compile Include="BeamsTests\BeamWithTrapezoidalLoadTests.cs" />
     <Compile Include="BeamsTests\BeamWithTriangleLoad2Tests.cs" />
     <Compile Include="BeamsTests\BeamWithTriangleLoad1Tests.cs" />
-    <Compile Include="BeamTests.cs" />
     <Compile Include="BeamsTests\BeamWithLeftOverhangingTests.cs" />
     <Compile Include="BeamsTests\BeamWithTwoSectionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
