Double hinge repaired. Section properties calculations for any shape.

--- a/BeamStatica/BeamStatica.csproj
+++ b/BeamStatica/BeamStatica.csproj
@@ -84,7 +84,8 @@
     <Compile Include="Results\Reactions\Reaction.cs" />
     <Compile Include="Results\Reactions\ShearForce.cs" />
     <Compile Include="Results\OnSpan\ShearResult.cs" />
-    <Compile Include="Sections\PolygonSection.cs" />
+    <Compile Include="Sections\Additional\Interfaces\IPoint.cs" />
+    <Compile Include="Sections\Additional\Point.cs" />
     <Compile Include="Spans\Interfaces\ILengthProvider.cs" />
     <Compile Include="Spans\Interfaces\ISpan.cs" />
     <Compile Include="Spans\Span.cs" />
