Horizontal forces included.

--- a/BeamStatica/BeamStatica.csproj
+++ b/BeamStatica/BeamStatica.csproj
@@ -67,25 +67,31 @@
     <Compile Include="Nodes\Interfaces\INode.cs" />
     <Compile Include="Nodes\Interfaces\INumeration.cs" />
     <Compile Include="Nodes\Interfaces\IRotationProvider.cs" />
+    <Compile Include="Nodes\Interfaces\INormalForceProvider.cs" />
     <Compile Include="Nodes\Interfaces\IShearForceProvider.cs" />
     <Compile Include="Nodes\Node.cs" />
+    <Compile Include="Nodes\SupportedNodeWithHinge.cs" />
     <Compile Include="Nodes\SupportedNode.cs" />
     <Compile Include="Nodes\TelescopeNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Results\Displacements\Displacement.cs" />
+    <Compile Include="Results\Displacements\HorizontalDeflection.cs" />
     <Compile Include="Results\Interfaces\IGetResult.cs" />
     <Compile Include="Results\OnSpan\BendingMomentResult.cs" />
     <Compile Include="Results\OnSpan\DeflectionResult.cs" />
     <Compile Include="Results\OnSpan\RotationResult.cs" />
     <Compile Include="Results\Reactions\BendingMoment.cs" />
-    <Compile Include="Results\Displacements\Deflection.cs" />
+    <Compile Include="Results\Displacements\VerticalDeflection.cs" />
     <Compile Include="Results\Displacements\Rotation.cs" />
     <Compile Include="Results\Interfaces\IResultValue.cs" />
+    <Compile Include="Results\Reactions\NormalForce.cs" />
     <Compile Include="Results\Reactions\Reaction.cs" />
     <Compile Include="Results\Reactions\ShearForce.cs" />
     <Compile Include="Results\OnSpan\ShearResult.cs" />
     <Compile Include="Sections\Additional\Interfaces\IPoint.cs" />
     <Compile Include="Sections\Additional\Point.cs" />
+    <Compile Include="Sections\Interfaces\IArea.cs" />
+    <Compile Include="Sections\Interfaces\ISection.cs" />
     <Compile Include="Spans\Interfaces\ILengthProvider.cs" />
     <Compile Include="Spans\Interfaces\ISpan.cs" />
     <Compile Include="Spans\Span.cs" />
