--- a/BeamStatica/BeamStatica.csproj
+++ b/BeamStatica/BeamStatica.csproj
@@ -54,12 +54,14 @@
     <Compile Include="Beams\Interfaces\IBeam.cs" />
     <Compile Include="Beams\Interfaces\IGlobalStiffnessMatrix.cs" />
     <Compile Include="Beams\Interfaces\IResultProvider.cs" />
+    <Compile Include="Loads\ContinousLoads\ContinousLoad.cs" />
+    <Compile Include="Loads\Interfaces\IContinousLoad.cs" />
     <Compile Include="Loads\Interfaces\ILoad.cs" />
     <Compile Include="Loads\Interfaces\ILoadWithPosition.cs" />
     <Compile Include="Loads\Interfaces\INodeLoad.cs" />
     <Compile Include="Loads\Interfaces\ISpanLoad.cs" />
     <Compile Include="Loads\PointLoads\BendingMoment.cs" />
-    <Compile Include="Loads\ContinousLoads\ContinousLoad.cs" />
+    <Compile Include="Loads\ContinousLoads\ContinousShearLoad.cs" />
     <Compile Include="Loads\PointLoads\ConcentratedLoad.cs" />
     <Compile Include="Loads\PointLoads\SpanConcentratedLoad.cs" />
     <Compile Include="Loads\PointLoads\NormalLoad.cs" />
