Temperature load. Clean the tests.

--- a/BeamStatica/BeamStatica.csproj
+++ b/BeamStatica/BeamStatica.csproj
@@ -55,11 +55,13 @@
     <Compile Include="Beams\Interfaces\IGlobalStiffnessMatrix.cs" />
     <Compile Include="Beams\Interfaces\IResultProvider.cs" />
     <Compile Include="Loads\ContinousLoads\ContinousLoad.cs" />
+    <Compile Include="Loads\ContinousLoads\TemperatureDifferenceLoad.cs" />
     <Compile Include="Loads\Interfaces\IContinousLoad.cs" />
     <Compile Include="Loads\Interfaces\ILoad.cs" />
     <Compile Include="Loads\Interfaces\ILoadWithPosition.cs" />
     <Compile Include="Loads\Interfaces\INodeLoad.cs" />
     <Compile Include="Loads\Interfaces\ISpanLoad.cs" />
+    <Compile Include="Loads\Load.cs" />
     <Compile Include="Loads\PointLoads\BendingMoment.cs" />
     <Compile Include="Loads\ContinousLoads\ContinousShearLoad.cs" />
     <Compile Include="Loads\PointLoads\ConcentratedLoad.cs" />
@@ -67,7 +69,8 @@
     <Compile Include="Loads\PointLoads\NormalLoad.cs" />
     <Compile Include="Loads\PointLoads\ShearLoad.cs" />
     <Compile Include="Loads\PointLoads\VerticalDisplacement.cs" />
-    <Compile Include="Materials\Intefaces\IYoungModulus.cs" />
+    <Compile Include="Materials\Concrete.cs" />
+    <Compile Include="Materials\Intefaces\IMaterial.cs" />
     <Compile Include="Materials\Material.cs" />
     <Compile Include="Nodes\FixedNode.cs" />
     <Compile Include="Nodes\FreeNode.cs" />
