Continous loads results separated. Temperature load.

--- a/BeamStatica/BeamStatica.csproj
+++ b/BeamStatica/BeamStatica.csproj
@@ -54,14 +54,27 @@
     <Compile Include="Beams\Interfaces\IBeam.cs" />
     <Compile Include="Beams\Interfaces\IGlobalStiffnessMatrix.cs" />
     <Compile Include="Beams\Interfaces\IResultProvider.cs" />
+    <Compile Include="Loads\ContinousLoads\AlongTemperatureDifferenceLoad.cs" />
+    <Compile Include="Loads\ContinousLoads\AlongTemperatureDifferenceResult\HorizontalDeflectionResult.cs" />
     <Compile Include="Loads\ContinousLoads\ContinousLoad.cs" />
-    <Compile Include="Loads\ContinousLoads\TemperatureDifferenceLoad.cs" />
+    <Compile Include="Loads\ContinousLoads\Interfaces\IDisplacementResult.cs" />
+    <Compile Include="Loads\ContinousLoads\Interfaces\IForceResult.cs" />
+    <Compile Include="Loads\ContinousLoads\ShearLoadResults\BendingMomentResult.cs" />
+    <Compile Include="Loads\ContinousLoads\LoadResults\DisplacementResultBase.cs" />
+    <Compile Include="Loads\ContinousLoads\LoadResults\ForceResultBase.cs" />
+    <Compile Include="Loads\ContinousLoads\LoadResults\ResultBase.cs" />
+    <Compile Include="Loads\ContinousLoads\ShearLoadResults\RotationResult.cs" />
+    <Compile Include="Loads\ContinousLoads\ShearLoadResults\ShearResult.cs" />
+    <Compile Include="Loads\ContinousLoads\ShearLoadResults\VerticalDeflectionResult.cs" />
+    <Compile Include="Loads\ContinousLoads\UpDownTemperatureDifferenceLoad.cs" />
+    <Compile Include="Loads\ContinousLoads\UpDownTemperatureDifferenceResults\RotationResult.cs" />
+    <Compile Include="Loads\ContinousLoads\UpDownTemperatureDifferenceResults\VerticalDeflectionReesult.cs" />
     <Compile Include="Loads\Interfaces\IContinousLoad.cs" />
     <Compile Include="Loads\Interfaces\ILoad.cs" />
     <Compile Include="Loads\Interfaces\ILoadWithPosition.cs" />
     <Compile Include="Loads\Interfaces\INodeLoad.cs" />
     <Compile Include="Loads\Interfaces\ISpanLoad.cs" />
-    <Compile Include="Loads\Load.cs" />
+    <Compile Include="Loads\LoadData.cs" />
     <Compile Include="Loads\PointLoads\BendingMoment.cs" />
     <Compile Include="Loads\ContinousLoads\ContinousShearLoad.cs" />
     <Compile Include="Loads\PointLoads\ConcentratedLoad.cs" />
