--- a/BeamStaticaTests/BeamStaticaTests.csproj
+++ b/BeamStaticaTests/BeamStaticaTests.csproj
@@ -64,6 +64,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BeamsTests\BeamPerformanceTests.cs" />
+    <Compile Include="BeamsTests\BeamWithAngledLoads2Tests.cs" />
+    <Compile Include="BeamsTests\BeamWithAngledLoads1Tests.cs" />
     <Compile Include="BeamsTests\BeamWithSupportWithHingeTests.cs" />
     <Compile Include="BeamsTests\BeamWithPointBendingMomentLoadTests.cs" />
     <Compile Include="BeamsTests\BeamWithMultipleSpansTests.cs" />
