--- a/BeamStatica/BeamStatica.csproj
+++ b/BeamStatica/BeamStatica.csproj
@@ -56,9 +56,14 @@
     <Compile Include="Beams\Interfaces\IResultProvider.cs" />
     <Compile Include="Loads\ContinousLoads\AlongTemperatureDifferenceLoad.cs" />
     <Compile Include="Loads\ContinousLoads\AlongTemperatureDifferenceResult\HorizontalDeflectionResult.cs" />
+    <Compile Include="Loads\ContinousLoads\ContinousAngledLoad.cs" />
+    <Compile Include="Loads\ContinousLoads\ContinousBendingMomentLoad.cs" />
     <Compile Include="Loads\ContinousLoads\ContinousLoad.cs" />
+    <Compile Include="Loads\ContinousLoads\ContinousNormalLoad.cs" />
     <Compile Include="Loads\ContinousLoads\Interfaces\IDisplacementResult.cs" />
     <Compile Include="Loads\ContinousLoads\Interfaces\IForceResult.cs" />
+    <Compile Include="Loads\ContinousLoads\NormalLoadResults\HorizontalDeflectionResult.cs" />
+    <Compile Include="Loads\ContinousLoads\NormalLoadResults\NormalForceResult.cs" />
     <Compile Include="Loads\ContinousLoads\ShearLoadResults\BendingMomentResult.cs" />
     <Compile Include="Loads\ContinousLoads\LoadResults\DisplacementResultBase.cs" />
     <Compile Include="Loads\ContinousLoads\LoadResults\ForceResultBase.cs" />
@@ -66,6 +71,8 @@
     <Compile Include="Loads\ContinousLoads\ShearLoadResults\RotationResult.cs" />
     <Compile Include="Loads\ContinousLoads\ShearLoadResults\ShearResult.cs" />
     <Compile Include="Loads\ContinousLoads\ShearLoadResults\VerticalDeflectionResult.cs" />
+    <Compile Include="Loads\ContinousLoads\SpanExtendLoad.cs" />
+    <Compile Include="Loads\ContinousLoads\SpanExtendLoadResult\HorizontalDeflectionResult.cs" />
     <Compile Include="Loads\ContinousLoads\UpDownTemperatureDifferenceLoad.cs" />
     <Compile Include="Loads\ContinousLoads\UpDownTemperatureDifferenceResults\RotationResult.cs" />
     <Compile Include="Loads\ContinousLoads\UpDownTemperatureDifferenceResults\VerticalDeflectionReesult.cs" />
@@ -79,9 +86,11 @@
     <Compile Include="Loads\PointLoads\BendingMoment.cs" />
     <Compile Include="Loads\ContinousLoads\ContinousShearLoad.cs" />
     <Compile Include="Loads\PointLoads\ConcentratedLoad.cs" />
+    <Compile Include="Loads\PointLoads\RotationDisplacement.cs" />
     <Compile Include="Loads\PointLoads\SpanConcentratedLoad.cs" />
     <Compile Include="Loads\PointLoads\NormalLoad.cs" />
     <Compile Include="Loads\PointLoads\ShearLoad.cs" />
+    <Compile Include="Loads\PointLoads\HorizontalDisplacement.cs" />
     <Compile Include="Loads\PointLoads\VerticalDisplacement.cs" />
     <Compile Include="Materials\Concrete.cs" />
     <Compile Include="Materials\Intefaces\IMaterial.cs" />
