--- a/BeamStaticaTests/BeamStaticaTests.csproj
+++ b/BeamStaticaTests/BeamStaticaTests.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\NUnit3TestAdapter.3.10.0\build\net35\NUnit3TestAdapter.props" Condition="Exists('..\packages\NUnit3TestAdapter.3.10.0\build\net35\NUnit3TestAdapter.props')" />
+  <Import Project="..\packages\NUnit3TestAdapter.3.11.2\build\net35\NUnit3TestAdapter.props" Condition="Exists('..\packages\NUnit3TestAdapter.3.11.2\build\net35\NUnit3TestAdapter.props')" />
   <Import Project="..\packages\NUnit.3.11.0\build\NUnit.props" Condition="Exists('..\packages\NUnit.3.11.0\build\NUnit.props')" />
   <Import Project="..\packages\MSTest.TestAdapter.1.3.2\build\net45\MSTest.TestAdapter.props" Condition="Exists('..\packages\MSTest.TestAdapter.1.3.2\build\net45\MSTest.TestAdapter.props')" />
   <PropertyGroup>
@@ -43,16 +43,30 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.3.1\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="MathNet.Numerics, Version=4.6.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.3.2\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.3.2\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="Moq, Version=4.10.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.10.1\lib\net45\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.11.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.1\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -64,6 +78,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BeamsTests\BeamPerformanceTests.cs" />
+    <Compile Include="BeamsTests\BeamWithAngledSupportTests.cs" />
+    <Compile Include="BeamsTests\BeamWithContinousBendingMomentLoadsTests.cs" />
     <Compile Include="BeamsTests\BeamWithSpanExtendsLoadsTests.cs" />
     <Compile Include="BeamsTests\BeamWithContinousAngledLoadsTests.cs" />
     <Compile Include="BeamsTests\BeamWithAngledLoads3Tests.cs" />
@@ -97,10 +113,31 @@
     <Compile Include="BeamsTests\BeamWithVerticalDisplacementAtNode3Tests.cs" />
     <Compile Include="BeamsTests\BeamWithVerticalDisplacementAtNode2Tests.cs" />
     <Compile Include="BeamsTests\BeamWithVerticalDisplacementAtNode1Tests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\AlongTemperatureDifferemceResult\HorizontalDeflectionResultTests.cs" />
+    <Compile Include="UnitTests\Beams\GlobalStiffnessMatrixTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sections\PolygonSection3Tests.cs" />
-    <Compile Include="Sections\PolygonSection2Tests.cs" />
-    <Compile Include="Sections\PolygonSection1Tests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\UpDownTemperatureDifferenceLoadTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\SpanExtendLoadTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\ContinousShearLoad.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\ContinousNormalLoadTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\ContinousBendingMomentLoadTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\ContinousAngledLoadTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\AlongTemperatureDifferenceLoadTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\NormalLoadResults\NormalForceResultTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\ShearLoadResults\RotationResultTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\ShearLoadResults\BendingMomentResultTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\ShearLoadResults\ShearResultTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\ShearLoadResults\VerticalDeflectionResultTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\SpanExtendLoadResult\HorizontalDeflectionResultTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\UpDownTemperatureDifferenceResults\RotationResultTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\UpDownTemperatureDifferenceResults\VerticalDeflectionResultTests.cs" />
+    <Compile Include="UnitTests\Sections\PolygonSection3Tests.cs" />
+    <Compile Include="UnitTests\Sections\PolygonSection2Tests.cs" />
+    <Compile Include="UnitTests\Sections\PolygonSection1Tests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\BendingMomentLoadResults\VerticalDeflectionResultTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\BendingMomentLoadResults\RotationResultTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\BendingMomentLoadResults\BendingMomentResultTests.cs" />
+    <Compile Include="UnitTests\Loads\ContinousLoads\NormalLoadResults\HorizontalDeflectionResultTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -110,6 +147,9 @@
       <Project>{5BA4928E-A4D5-4B5E-A8CC-95EE66ADEADC}</Project>
       <Name>BeamStatica</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UnitTests\Loads\PointLoads\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
@@ -138,7 +178,7 @@
     <Error Condition="!Exists('..\packages\MSTest.TestAdapter.1.3.2\build\net45\MSTest.TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MSTest.TestAdapter.1.3.2\build\net45\MSTest.TestAdapter.props'))" />
     <Error Condition="!Exists('..\packages\MSTest.TestAdapter.1.3.2\build\net45\MSTest.TestAdapter.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MSTest.TestAdapter.1.3.2\build\net45\MSTest.TestAdapter.targets'))" />
     <Error Condition="!Exists('..\packages\NUnit.3.11.0\build\NUnit.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit.3.11.0\build\NUnit.props'))" />
-    <Error Condition="!Exists('..\packages\NUnit3TestAdapter.3.10.0\build\net35\NUnit3TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit3TestAdapter.3.10.0\build\net35\NUnit3TestAdapter.props'))" />
+    <Error Condition="!Exists('..\packages\NUnit3TestAdapter.3.11.2\build\net35\NUnit3TestAdapter.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NUnit3TestAdapter.3.11.2\build\net35\NUnit3TestAdapter.props'))" />
   </Target>
   <Import Project="..\packages\MSTest.TestAdapter.1.3.2\build\net45\MSTest.TestAdapter.targets" Condition="Exists('..\packages\MSTest.TestAdapter.1.3.2\build\net45\MSTest.TestAdapter.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
